<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lexus_rx_450h_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pk@todo.todo">pk</maintainer>
  <license>TODO: License declaration</license>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
